@@ -1,5 +1,7 @@
 *SVN*
 
+* Added logging for dependency load errors with fixtures #11056 [stuthulhu]
+
 * Time zone aware attributes use Time#in_time_zone [Geoff Buesing]
 
 * Fixed that scoped joins would not always be respected #6821 [Theory/Danger]
